--- a/hassctl.conf
+++ b/hassctl.conf
@@ -9,5 +9,6 @@ HASSCTL_BRANCH=master
 #PIP_EXEC=$VIRTUAL_ENV/bin/pip3
 #HASS_EXEC=$VIRTUAL_ENV/bin/hass
 
+HASS_CONFIG=/home/homeassistant/.homeassistant
 #HASS_USER=homeassistant
 #HASS_SERVICE=home-assistant.service
