--- a/hassctl.conf
+++ b/hassctl.conf
@@ -5,10 +5,10 @@
 
 HASSCTL_BRANCH=master
 
-#VIRTUAL_ENV=/srv/homeassistant
-#PIP_EXEC=$VIRTUAL_ENV/bin/pip3
-#HASS_EXEC=$VIRTUAL_ENV/bin/hass
+VIRTUAL_ENV=/srv/homeassistant
+PIP_EXEC=$VIRTUAL_ENV/bin/pip3
+HASS_EXEC=$VIRTUAL_ENV/bin/hass
 
 HASS_CONFIG=/home/homeassistant/.homeassistant
-#HASS_USER=homeassistant
-#HASS_SERVICE=home-assistant.service
+HASS_USER=homeassistant
+HASS_SERVICE=home-assistant.service
