--- a/hassctl.conf
+++ b/hassctl.conf
@@ -11,4 +11,4 @@ HASS_EXEC=$VIRTUAL_ENV/bin/hass
 
 HASS_CONFIG=/home/homeassistant/.homeassistant
 HASS_USER=homeassistant
-HASS_SERVICE=home-assistant@homeassistant.service
+HASS_SERVICE="home*assistant*"
