--- a/hassctl.conf
+++ b/hassctl.conf
@@ -12,3 +12,5 @@ HASS_EXEC=$VIRTUAL_ENV/bin/hass
 HASS_CONFIG=/home/homeassistant/.homeassistant
 HASS_USER=homeassistant
 HASS_SERVICE="home*assistant*"
+
+OZW_LOG=$HASS_CONFIG/OZW_Log.txt
