--- a/hassctl.conf
+++ b/hassctl.conf
@@ -12,5 +12,10 @@ HASS_EXEC=$VIRTUAL_ENV/bin/hass
 HASS_CONFIG=/home/homeassistant/.homeassistant
 HASS_USER=homeassistant
 HASS_SERVICE="home*assistant*"
+HASS_UPDATE_BETA=
 
 OZW_LOG=$HASS_CONFIG/OZW_Log.txt
+
+# Hass.io specific configuration
+
+# LOG_COLORS=ERROR=red,WARN=yellow,INFO=green,DEBUG=cyan,TRACE=blue
