Update from correct branch

--- a/hassctl.conf
+++ b/hassctl.conf
@@ -3,7 +3,7 @@
 # A full description of the configuration file is at
 # https://github.com/dale3h/hassctl
 
-HASSCTL_BRANCH=master
+# HASSCTL_BRANCH=master
 
 VIRTUAL_ENV=/srv/homeassistant
 PIP_EXEC=$VIRTUAL_ENV/bin/pip3
